--- a/Hermit/src/app/sidemenu/sidemenu.component.css
+++ b/Hermit/src/app/sidemenu/sidemenu.component.css
@@ -8,9 +8,9 @@
 
     position:fixed;
     
-    overflow-x: scroll;
+    overflow-x: hidden;
     overflow-y: hidden;
-    transition: height 0.2s;
+    transition: height 0.4s;
     padding:0;
     margin:0;
     
@@ -59,11 +59,6 @@ flex-direction:column;
     margin-left:1rem;
 }
 #sidemenulogin{
-   display:flex;
-   height:auto;
-   flex-direction: column;
-   align-items:center;
-   margin-top:80%;
    margin-bottom:10%;
    padding-left:1rem;
    padding-right:1rem;
