--- a/Hermit/src/styles.css
+++ b/Hermit/src/styles.css
@@ -5,7 +5,8 @@
 body {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
+    width: auto;
     margin: 0 auto;
     background-color: #10172a ;
 }
